<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>nostr.si4n6r</groupId>
    <artifactId>bottin</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <modules>
        <module>bottin-servlet</module>
        <module>bottin-rest</module>
        <module>bottin-jpa</module>
        <module>bottin-rest-client</module>
        <module>bottin-api</module>
    </modules>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>flatten-maven-plugin</artifactId>
                    <version>${flatten-maven-plugin.version}</version>
                    <configuration>
                        <updatePomFile>true</updatePomFile>
                        <flattenMode>resolveCiFriendliesOnly</flattenMode>
                    </configuration>
                    <executions>
                        <execution>
                            <id>flatten</id>
                            <phase>process-resources</phase>
                            <goals>
                                <goal>flatten</goal>
                            </goals>
                        </execution>
                        <execution>
                            <id>flatten.clean</id>
                            <phase>clean</phase>
                            <goals>
                                <goal>clean</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven-compiler-plugin.version}</version>
                    <configuration>
                        <showDeprecation>true</showDeprecation>
                        <annotationProcessorPaths>
                            <annotationProcessorPath>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                                <version>${lombok.version}</version>
                            </annotationProcessorPath>
                        </annotationProcessorPaths>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${maven-surefire-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <version>${maven-failsafe-plugin.version}</version>
                    <executions>
                        <execution>
                            <goals>
                                <goal>integration-test</goal>
                                <goal>verify</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <properties>
        <lombok.version>1.18.24</lombok.version>

        <nostr-java.version>0.3.1</nostr-java.version>

        <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
        <maven-surefire-plugin.version>3.1.2</maven-surefire-plugin.version>
        <maven-failsafe-plugin.version>3.1.2</maven-failsafe-plugin.version>
        <flatten-maven-plugin.version>1.5.0</flatten-maven-plugin.version>
        <maven-war-plugin.version>3.3.2</maven-war-plugin.version>

        <spring.boot.starter.test.version>3.2.0</spring.boot.starter.test.version>
        <spring.boot.maven.plugin.version>3.2.0</spring.boot.maven.plugin.version>
        <spring.boot.starter.data.jpa.version>3.2.0</spring.boot.starter.data.jpa.version>
        <spring.boot.starter.jdbc.version>3.2.0</spring.boot.starter.jdbc.version>
        <spring.boot.starter.validation.version>3.2.0</spring.boot.starter.validation.version>
        <spring.boot.starter.data.rest.version>3.2.0</spring.boot.starter.data.rest.version>
        <spring.boot.starter.web.version>3.2.0</spring.boot.starter.web.version>
        <spring.boot.starter.test.version>3.2.0</spring.boot.starter.test.version>

        <hibernate.version>6.2.4.Final</hibernate.version>
        <jaxb.version>4.0.2</jaxb.version>
        <mapstruct.version>1.4.2.Final</mapstruct.version>

        <postgresql.version>42.3.1</postgresql.version>

        <logback.version>1.4.11</logback.version>
        <lombok.version>1.18.24</lombok.version>
        <jakarta.servlet-api.version>6.0.0</jakarta.servlet-api.version>
        <jackson.databind.version>2.15.1</jackson.databind.version>
        <junit.version>5.9.2</junit.version>
        <maven-war-plugin.version>3.3.2</maven-war-plugin.version>

        <tomcat7-maven-plugin.version>2.2</tomcat7-maven-plugin.version>

        <jakarta.servlet-api.version>6.0.0</jakarta.servlet-api.version>

        <!-- Test Dependency Versions -->
        <junit.version>5.9.2</junit.version>
        <assertj.version>3.23.1</assertj.version>

        <maven.compiler.source>20</maven.compiler.source>
        <maven.compiler.target>20</maven.compiler.target>

        <TomcatServer>localhost</TomcatServer>
        <TomcatServer.url>http://localhost:8080/manager/text</TomcatServer.url>

        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
</project>